--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
   "peerDependencies": {
     "react": "*",
     "react-native": "*",
-    "react-native-maps": ">=0.21.0"
+    "react-native-maps": ">=0.21.0",
+    "@react-native-community/geolocation": ">=1.4.2"
   },
   "dependencies": {
     "geolib": "^3.0.2",
